--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -11,12 +11,12 @@
 				<div class="member-type">
 					<h5 class="invisible"> </h5>
 					<ul>
-						<li><a href="javascript:go_jr()" class="mb01" title="초등학생 맞춤 서비스 바로가기">초등학생</a></li>
-						<li><a href="/cnet/front/type/typeService.do?seq=100206" class="mb02" title="중학생 맞춤 서비스 바로가기">중학생</a></li>
-						<li><a href="/cnet/front/type/typeService.do?seq=100207" class="mb03" title="고등학생 맞춤 서비스 바로가기">고등학생</a></li>
-						<li><a href="/cnet/front/type/typeService.do?seq=100208" class="mb04" title="대학생,일반 맞춤 서비스 바로가기">대학생·일반</a></li>
-						<li><a href="/cnet/front/type/typeService.do?seq=100210" class="mb05" title="학부모 맞춤 서비스 바로가기">학부모</a></li>
-						<li><a href="/cnet/front/type/typeService.do?seq=100214" class="mb06" title="교사 맞춤 서비스 바로가기">교사</a></li>
+						<li><a href="studentBenner" class="mb01" title="초등학생 맞춤 서비스 바로가기">초등학생</a></li>
+						<li><a href="studentBenner" class="mb02" title="중학생 맞춤 서비스 바로가기">중학생</a></li>
+						<li><a href="studentBenner" class="mb03" title="고등학생 맞춤 서비스 바로가기">고등학생</a></li>
+						<li><a href="studentBenner" class="mb04" title="대학생,일반 맞춤 서비스 바로가기">대학생·일반</a></li>
+						<li><a href="studentBenner" class="mb05" title="학부모 맞춤 서비스 바로가기">학부모</a></li>
+						<li><a href="studentBenner" class="mb06" title="교사 맞춤 서비스 바로가기">교사</a></li>
 					</ul>
 				</div>
 				<div class="main-search-bx">
