--- a/src/main/resources/templates/main/studentBenner.html
+++ b/src/main/resources/templates/main/studentBenner.html
@@ -14,9 +14,9 @@
         <div class="contents">
             <div class="sel-mb-type">
                 <ul class="btn-mbty-wrap"><!-- 선택된 상태 li에 class="selected" 추가 -->
-                    <li class="mbty1"><a href="#" class="btn-mbtype" title="주니어 커리어넷 바로가기(새창)">초등학생</a></li>
+                    <li class="mbty1 selected"><a href="#" class="btn-mbtype" title="주니어 커리어넷 바로가기(새창)">초등학생</a></li>
                     <li class="mbty2"><a href="#" class="btn-mbtype">중학생</a></li>
-                    <li class="mbty3 selected"><a href="#" class="btn-mbtype">고등학생</a></li>
+                    <li class="mbty3"><a href="#" class="btn-mbtype">고등학생</a></li>
                     <li class="mbty4"><a href="#" class="btn-mbtype">대학생·일반</a></li>
                     <li class="mbty5 "><a href="#" class="btn-mbtype">학부모</a></li>
                     <li class="mbty6"><a href="#" class="btn-mbtype">교사</a></li>
@@ -54,13 +54,13 @@
                                 <li>
                                         <strong><span class="num">2</span>진로고민 해결하기</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/counsel/counselInfo.do?frontMenu=Y">상담신청</a></li>
+                                            <li><a href="/consulting/list">상담신청</a></li>
                                                 </ul>
                                     </li>
                                 <li>
                                         <strong><span class="num">3</span>진로정보탐색</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/base/job/jobList.do">직업정보</a></li>
+                                            <li><a href="/syBody/syBody">직업정보</a></li>
                                                 <li><a href="/cnet/front/base/guidebook/guideBookList.do">미래직업</a></li>
                                                 <li><a href="/cnet/front/web/movie/catMapp/catMappList.do?SUP_CAT_ID=MCAT0037&amp;searchCatID=MCAT0040&amp;searchCatIDs=MCAT0041">중학생용 진로동영상</a></li>
                                                 <li><a href="/cnet/front/base/major/FhiSchMajorList.do">고등학교 학과정보</a></li>
@@ -84,15 +84,15 @@
                                 <li>
                                         <strong><span class="num">2</span>진로고민 해결하기</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/counsel/counselInfo.do?frontMenu=Y">상담신청</a></li>
+                                            <li><a href="/consulting/list">상담신청</a></li>
                                                 <li><a href="/cnet/front/commbbs/jSolutionBest/FcommBbsList.do">진로솔루션</a></li>
                                                 </ul>
                                     </li>
                                 <li>
                                         <strong><span class="num">3</span>진로정보탐색</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/base/job/jobList.do">직업정보</a></li>
-                                                <li><a href="/cnet/front/base/guidebook/guideBookList.do">미래직업</a></li>
+                                            <li><a href="/syBody/syBody">직업정보</a></li>
+                                                <li><a href="/syBody/syBody">미래직업</a></li>
                                                 <li><a href="/cnet/front/web/movie/catMapp/catMappList.do?SUP_CAT_ID=MCAT0037&amp;searchCatID=MCAT0040&amp;searchCatIDs=MCAT0040">고등학생용 진로동영상</a></li>
                                                 <li><a href="/cnet/front/base/major/FunivMajorList.do">대학교 학과정보</a></li>
                                                 <li><a href="/cnet/front/base/major/FunivMajorInterviewList.do">학과인터뷰</a></li>
@@ -115,7 +115,7 @@
                                 <li>
                                         <strong><span class="num">2</span>진로고민 해결하기</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/counsel/counselInfo.do?frontMenu=Y">상담신청</a></li>
+                                            <li><a href="/consulting/list">상담신청</a></li>
                                                 </ul>
                                     </li>
                                 <li>
@@ -123,8 +123,8 @@
                                         <ul>
                                             <li><a href="/cnet/front/base/job/jobInterview_new/jobSpecialList_new.do">직업인 인터뷰</a></li>
                                                 <li><a href="/cnet/front/base/job/jobInterview_new/jobSpecialList_new.do?INTV_KND=101956">커리어패스</a></li>
-                                                <li><a href="/cnet/front/base/job/jobList.do">직업정보</a></li>
-                                                <li><a href="/cnet/front/base/guidebook/guideBookList.do">미래직업</a></li>
+                                                <li><a href="/syBody/syBody">직업정보</a></li>
+                                                <li><a href="/syBody/syBody">미래직업</a></li>
                                                 <li><a href="/cnet/front/web/movie/catMapp/catMappList.do?SUP_CAT_ID=MCAT0037&amp;searchCatID=MCAT0039&amp;searchCatIDs=MCAT0039">대학생·일반용 진로동영상</a></li>
                                                 </ul>
                                     </li>
@@ -145,7 +145,7 @@
                                 <li>
                                         <strong><span class="num">2</span>자녀 진로고민 해결하기</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/counsel/counselInfo.do?frontMenu=Y">상담신청</a></li>
+                                            <li><a href="/consulting/list">상담신청</a></li>
                                                 </ul>
                                     </li>
                                 <li>
@@ -170,10 +170,10 @@
                                         <strong><span class="num">1</span>학생 진로지도 및<br>
     진로교육을 위한 콘텐츠</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/commbbs/courseMenu/commBbsList.do">진로교육자료</a></li>
+                                            <li><a href="/edu/eduBoard">진로교육자료</a></li>
                                                 <li><a href="/cnet/front/commbbs/jSolutionBest/FcommBbsList.do">진로솔루션</a></li>
                                                 <li><a href="/cnet/front/web/movie/catMapp/catMappList.do?SUP_CAT_ID=MCAT0037">진로동영상</a></li>
-                                                <li><a href="/cnet/front/base/job/jobList.do#tab1">직업정보</a></li>
+                                                <li><a href="/syBody/syBody">직업정보</a></li>
                                                 <li><a href="/cnet/front/base/major/FunivMajorList.do">학과정보</a></li>
                                                 <li><a href="/cnet/front/base/school/schoolUniversityList.do">학교정보</a></li>
                                                 <li><a href="/cnet/front/base/job/jobInterview_new/jobSpecialList_new.do?INTV_KND=101956">커리어패스</a></li>
@@ -184,7 +184,7 @@
                                         <strong><span class="num">2</span>학생지도를 위한<br>
     진로상담</strong>
                                         <ul>
-                                            <li><a href="/cnet/front/counsel/counselInfo.do?frontMenu=Y">상담신청</a></li>
+                                            <li><a href="/consulting/list">상담신청</a></li>
                                                 <li><a href="/cnet/front/counsel/counselList.do">상담보기</a></li>
                                                 </ul>
                                     </li>
