--- a/src/main/resources/templates/consulting/boardList.html
+++ b/src/main/resources/templates/consulting/boardList.html
@@ -55,7 +55,7 @@
                 <col width="100">
               </colgroup>
               <thead>
-                <tr>
+                <tr style="vertical-align: middle;">
                   <th scope="col" class="first">번호</th>
                   <th scope="col">대상</th>
                   <th scope="col">제목</th>
