--- a/src/main/resources/templates/reply/writeReply.html
+++ b/src/main/resources/templates/reply/writeReply.html
@@ -4,7 +4,7 @@
 
 <div id="rep_container" style="margin-top: 132px;">
 	<form action="replyForm" class="replyForm" name="replyForm" method="post">
-	  <div>
+	  <div class="rep-container-wrap">
 	    <p class="reply_title">상담 답변</p>
 	    <ul class="reply_list">
 		  <input type="hidden" id="boardId" name="boardId" th:value="${key}">	
@@ -18,7 +18,7 @@
 	      </li>
 	    </ul>
 	  </div>
-	  <p class="btn_replyFC">
+	  <p class="btn_replyFC rep-container-wrap">
 		<input type="submit" class="btn_t_reply_finish" value="작성완료">
 		<input type="reset" class="btn_t_reply_cancel" value="작성취소">
 	  </p>
